k8s/store-ms/templates/ingress/payment-ms.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ms-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: payments-webhook
              port:
                number: 3003
